@@ -1,3 +1,10 @@
+2012-07-23  Jeff Johnston  <jjohnstn@redhat.com>
+
+	* src/org/eclipse/cdt/autotools/core/AutotoolsOptionConstants.java: New file.
+	* src/org/eclipse/cdt/internal/autotools/core/configure/IConfigureOption.java: Use IAutotoolsOption values for type constants.
+	* src/org/eclipse/cdt/internal/autotools/core/configure/AutotoolsConfiguration.java: Use AutotoolsOptionConstants
+	for names of configuration options.
+
 2012-07-20  Jeff Johnston  <jjohnstn@redhat.com>
 
 	* src/org/eclipse/cdt/autotools/core/AutotoolsPlugin.java (getAutotoolCfgOptions): New publicly accessible
